ex-1.13-v0.7/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-image-server
  labels:
    app: node-image-server
spec:
  selector:
    app: node-image-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
